Docker, Kubernetes, Swarm/5. Kubernetes Hands On/12. Ingress в Kubernetes. Создание Ingress на Minikube/deploy-svc-app-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v3
  labels:
    app: kuber-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-v3
  template:
    metadata:
      labels:
        app: http-server-v3
    spec:
      containers:
        - name: kuber-app
          image: bakavets/kuber:v3.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v3
spec:
  selector:
    app: http-server-v3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
