Docker, Kubernetes, Swarm/5. Kubernetes Hands On/12. Ingress в Kubernetes. Создание Ingress на Minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service
                port:
                  number: 80
          - pathType: Prefix
            path: /v1
            backend:
              service:
                name: kuber-service-v1
                port:
                  number: 80
          - pathType: Exact
            path: /v2
            backend:
              service:
                name: kuber-service-v2
                port:
                  number: 80
    - host: app-v3.example.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: kuber-service-v3
                port:
                  number: 80
